Initial stylesheet fiddling...

--- a/theme/colours.css
+++ b/theme/colours.css
@@ -1,24 +1,12 @@
+/* @override http://local.lonbrew.com/forum/styles/lonbrew-phpb/theme/colours.css */
+
 /*  	
 --------------------------------------------------------------
 Colours and backgrounds for common.css
 -------------------------------------------------------------- */
 
 html, body {
-	color: #536482;
 	background-color: #FFFFFF;
-}
-
-h1 {
-	color: #FFFFFF;
-}
-
-h2 {
-	color: #28313F;
-}
-
-h3 {
-	
-	color: #115098;
 }
 
 hr {
