--- a/theme/common.css
+++ b/theme/common.css
@@ -1,3 +1,5 @@
+/* @override http://local.lonbrew.com/forum/styles/lonbrew-phpb/theme/common.css */
+
 /* General Markup Styles
 ---------------------------------------- */
 
