--- a/theme/bootstrap-responsive.css
+++ b/theme/bootstrap-responsive.css
@@ -1,3 +1,5 @@
+/* @override http://local.lonbrew.com/forum/styles/lonbrew-phpb/theme/bootstrap-responsive.css */
+
 /*!
  * Bootstrap Responsive v2.0.3
  *
