--- a/theme/bootstrap.css
+++ b/theme/bootstrap.css
@@ -1,3 +1,5 @@
+/* @override http://local.lonbrew.com/forum/styles/lonbrew-phpb/theme/bootstrap.css */
+
 /*!
  * Bootstrap v2.0.3
  *
@@ -36,8 +38,6 @@ audio:not([controls]) {
 html {
   font-size: 100%;
   -webkit-text-size-adjust: 100%;
-      -ms-text-size-adjust: 100%;
-      background: #f8f8f8 url('./images/bg.png') repeat;
 }
 
 a:focus {
@@ -158,7 +158,6 @@ body {
   font-size: 13px;
   line-height: 18px;
   color: #333333;
-  background: #f8f8f8 url(images/bg.png) repeat;
   padding: 40px 0;
 }
 
@@ -1510,7 +1509,6 @@ table {
 .table td {
   padding: 8px;
   line-height: 18px;
-  
   border-top: 1px solid #dddddd;
 }
 
@@ -1533,7 +1531,7 @@ table {
 }
 
 .table tbody + tbody {
-  border-top: 2px solid #dddddd;
+  border-top: 1px solid #dddddd;
 }
 
 .table-condensed th,
@@ -1552,7 +1550,7 @@ table {
 }
 
 .table-bordered th {
-	border-left: 1px solid #555;
+	border-left: 1px solid #dddddd;
 }
 .table-bordered td {
   border-left: 1px solid #dddddd;
@@ -1611,7 +1609,7 @@ table {
 
 .table tbody tr:hover td,
 .table tbody tr:hover th {
-  background-color: #ddd;
+  background-color: #fafdd2;
 }
 
 table .span1 {
@@ -5066,22 +5064,26 @@ padding: 50px;
 table {
 	background-color: #fff;
 }
+
 thead, .heading {
-	background-color: #2c2c2c;
-  background-image: -moz-linear-gradient(top, #333333, #222222);
-  background-image: -ms-linear-gradient(top, #333333, #222222);
-  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#333333), to(#222222));
-  background-image: -webkit-linear-gradient(top, #333333, #222222);
-  background-image: -o-linear-gradient(top, #333333, #222222);
-  background-image: linear-gradient(top, #333333, #222222);
+  background-color: #fbfbfb;
+  background-image: -moz-linear-gradient(top, #ffffff, #f5f5f5);
+  background-image: -ms-linear-gradient(top, #ffffff, #f5f5f5);
+  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#ffffff), to(#f5f5f5));
+  background-image: -webkit-linear-gradient(top, #ffffff, #f5f5f5);
+  background-image: -o-linear-gradient(top, #ffffff, #f5f5f5);
+  background-image: linear-gradient(top, #ffffff, #f5f5f5);
   background-repeat: repeat-x;
-  -webkit-border-radius: 4px 4px 0 0;
-     -moz-border-radius: 4px 4px 0 0;
-          border-radius: 4px 4px 0 0;
-  filter: progid:dximagetransform.microsoft.gradient(startColorstr='#333333', endColorstr='#222222', GradientType=0);
- 
-	color: #999999;
+  border-bottom: 1px solid #ddd;
+  -webkit-border-radius: 3px;
+     -moz-border-radius: 3px;
+          border-radius: 3px;
+  filter: progid:dximagetransform.microsoft.gradient(startColorstr='#ffffff', endColorstr='#f5f5f5', GradientType=0);
+  -webkit-box-shadow: inset 0 1px 0 #ffffff;
+     -moz-box-shadow: inset 0 1px 0 #ffffff;
+          box-shadow: inset 0 1px 0 #ffffff;
 }
+
 h3.heading {
 	color: #999999;
 	font-size: 13px;
