--- a/theme/links.css
+++ b/theme/links.css
@@ -1,3 +1,5 @@
+/* @override http://local.lonbrew.com/forum/styles/lonbrew-phpb/theme/links.css */
+
 /* Link Styles
 ---------------------------------------- */
 
