--- a/theme/tweaks.css
+++ b/theme/tweaks.css
@@ -1,3 +1,5 @@
+/* @override http://local.lonbrew.com/forum/styles/lonbrew-phpb/theme/tweaks.css */
+
 /* Style Sheet Tweaks
 
 These style definitions are mainly IE specific 
