--- a/theme/stylesheet.css
+++ b/theme/stylesheet.css
@@ -1,4 +1,6 @@
-/* @override http://local.lonbrew.com/forum/styles/lonbrew-phpb/theme/stylesheet.css */
+/* @override 
+	http://local.lonbrew.com/forum/styles/lonbrew-phpbb/theme/stylesheet.css
+*/
 
 /*  phpBB3 Style Sheet
     --------------------------------------------------------------
@@ -21,5 +23,27 @@
 @import url("bootstrap.css");
 @import url("bootstrap-responsive.css");
 
-@import url(http://fonts.googleapis.com/css?family=Open+Sans:400italic,700italic,400,700);
-@import url(/wp-content/themes/lonbrew-wp/assets/css/lonbrew.css);
+@import url("http://fonts.googleapis.com/css?family=Open+Sans:400italic,700italic,400,700");
+
+body {
+  padding-top: 0;
+  padding-bottom: 20px;
+  font-family: "Open Sans", "Helvetica Neue", Arial, Helvetica, Geneva, sans-serif;
+  background: url(/wp-content/themes/lonbrew-wp/assets/img/hop.png) no-repeat fixed right bottom;
+}
+
+header #desktop-header {
+  background-image: url(/wp-content/themes/lonbrew-wp/assets/img/banner.gif) !important;
+  text-indent: -9999px;
+  height: 133px;
+  margin: 0 auto;
+}
+
+header #mobile-header {
+  text-align: center;
+  text-transform: uppercase;
+}
+
+header h1 {
+  margin: 25px 0;
+}
