--- a/template/overall_header.html
+++ b/template/overall_header.html
@@ -122,6 +122,41 @@
                 <li class="page_item"><a href="/our-favourite-pubs">Our Favourite Pubs</a></li>
                 <li class="page_item active"><a href="/forum">Forum</a></li>
               </ul>
+
+              <div class="btn-group pull-right">
+                <a class="btn btn-success dropdown-toggle" data-toggle="dropdown" href="#">
+                  {S_USERNAME}
+                  <span class="caret"></span>
+                </a>
+
+                <ul class="dropdown-menu">
+                  <!-- IF not S_IS_BOT and S_USER_LOGGED_IN -->
+                    <!-- IF S_DISPLAY_PM -->
+                    <li>
+                      <a href="{U_PRIVATEMSGS}"><i class="icon-envelope"></i> <span class="label label-important">{PRIVATE_MESSAGE_INFO}</span><!-- IF PRIVATE_MESSAGE_INFO_UNREAD -->, {PRIVATE_MESSAGE_INFO_UNREAD}<!-- ENDIF --></a>
+                    </li>
+                    <!-- ENDIF -->
+
+                    <!-- IF S_DISPLAY_SEARCH -->
+                    <li><a href="{U_SEARCH_SELF}"><i class="icon-file "></i> {L_SEARCH_SELF}</a></li>
+                    <!-- ENDIF -->
+
+                    <li class="bb-ucp"><a href="{U_PROFILE}" title="{L_PROFILE}" accesskey="e"><i class="icon-wrench "></i> {L_PROFILE}</a></li>
+                    <li class="divider"></li>
+                  <!-- ENDIF -->
+
+                  <li class="bb-logout">
+                    <a href="{U_LOGIN_LOGOUT}" title="{L_LOGIN_LOGOUT}" accesskey="x"><i class="icon-minus-sign "></i> {L_LOGIN_LOGOUT}</a>
+                  </li>
+
+                  <!-- IF not S_USER_LOGGED_IN and S_REGISTER_ENABLED and not (S_SHOW_COPPA or S_REGISTRATION) -->
+                    <li class="bb-register">
+                      <a href="{U_REGISTER}"><i class="icon-user "></i> {L_REGISTER}</a>
+                    </li>
+                  <!-- ENDIF -->
+                </ul>
+              </div><!--/btn-group pull-right-->
+
             </div><!--/.nav-collapse -->
           </div><!-- /.navbar-inner -->
         </div><!-- /.navbar -->
@@ -136,7 +171,6 @@
 		<div class="navbar">
 			<div class="navbar-inner">
 				<div class="container">
-				<a class="brand" href="{U_INDEX}">{SITENAME}</a>
 				<ul class="linklist nav" style="width: 50%;">
 
 
@@ -184,40 +218,6 @@
 
 			</ul><!-- ul -->
 
-			<div class="btn-group pull-right">
-  <a class="btn btn-success dropdown-toggle" data-toggle="dropdown" href="#">
-    {S_USERNAME}
-    <span class="caret"></span>
-  </a>
-  <ul class="dropdown-menu">
-    <!-- IF not S_IS_BOT and S_USER_LOGGED_IN -->
-
-    	<!-- IF S_DISPLAY_PM -->
-
-				<li>
-						<a href="{U_PRIVATEMSGS}"><i class="icon-envelope "></i> <span class="label label-important">{PRIVATE_MESSAGE_INFO}</span><!-- IF PRIVATE_MESSAGE_INFO_UNREAD -->, {PRIVATE_MESSAGE_INFO_UNREAD}<!-- ENDIF --></a></li><!-- ENDIF -->
-
-    <!-- IF S_DISPLAY_SEARCH -->
-
-					<li>
-					<a href="{U_SEARCH_SELF}"><i class="icon-file "></i> {L_SEARCH_SELF}</a>
-					</li>
-					<!-- ENDIF -->
-    <li class="bb-ucp">
-					<a href="{U_PROFILE}" title="{L_PROFILE}" accesskey="e"><i class="icon-wrench "></i> {L_PROFILE}</a>
-					</li>
-	<li class="divider"></li>
-	<!-- ENDIF -->
-	<li class="bb-logout"><a href="{U_LOGIN_LOGOUT}" title="{L_LOGIN_LOGOUT}" accesskey="x"><i class="icon-minus-sign "></i> {L_LOGIN_LOGOUT}</a></li>
-	<!-- IF not S_USER_LOGGED_IN and S_REGISTER_ENABLED and not (S_SHOW_COPPA or S_REGISTRATION) -->
-
-					<li class="bb-register"><a href="{U_REGISTER}"><i class="icon-user "></i> {L_REGISTER}</a></li>
-
-					<!-- ENDIF -->
-  </ul>
-</div><!--btn group-->
-
-				</div>
 
 			</div>
 		</div>
