Header and footer looking ok now.

--- a/theme/print.css
+++ b/theme/print.css
@@ -1,3 +1,5 @@
+/* @override http://local.lonbrew.com/forum/styles/lonbrew-phpbb/theme/print.css */
+
 /* Print Style Sheet
 ---------------------------------------- */
 
