--- a/template/overall_footer.html
+++ b/template/overall_footer.html
@@ -1,84 +1,36 @@
-	</div>
 
-<div id="page-footer">
+    <div id="page-footer" class="container">
 
-<div class="row-fluid">
-<div class="span4">
-<!-- IF U_MCP --><a class="btn btn-inverse" href="{U_MCP}" style=" display: block; ">{L_MCP}</a><!-- ENDIF -->
-</div>
+      <div class="breadcrumbalike">
+        <ul class="rightside">
+          <li><!-- IF U_TEAM --><a href="{U_TEAM}">{L_THE_TEAM}</a> &bull; <!-- ENDIF --><!-- IF not S_IS_BOT --><a href="{U_DELETE_COOKIES}">{L_DELETE_COOKIES}</a> &bull; <!-- ENDIF -->{S_TIMEZONE}</li>
+        </ul>
 
-<div class="span4">
-<!-- IF U_ACP --><a class="btn btn-inverse" href="{U_ACP}" style=" display: block; ">{L_ACP}</a><!-- ENDIF -->
-</div>
+        <ul>
+          <li class="phpbb-icon-home"><a href="{U_INDEX}" accesskey="h">{L_INDEX}</a></li>
+            <!-- IF not S_IS_BOT -->
+              <!-- IF S_WATCH_FORUM_LINK --> &bull; <li <!-- IF S_WATCHING_FORUM -->class="phpbb-icon-unsubscribe"<!-- ELSE -->class="phpbb-icon-subscribe"<!-- ENDIF -->><a href="{S_WATCH_FORUM_LINK}" title="{S_WATCH_FORUM_TITLE}">{S_WATCH_FORUM_TITLE}</a></li><!-- ENDIF -->
+              <!-- IF U_WATCH_TOPIC --> &bull; <li <!-- IF S_WATCHING_TOPIC -->class="phpbb-icon-unsubscribe"<!-- ELSE -->class="phpbb-icon-subscribe"<!-- ENDIF -->><a href="{U_WATCH_TOPIC}" title="{L_WATCH_TOPIC}">{L_WATCH_TOPIC}</a></li><!-- ENDIF -->
+              <!-- IF U_BOOKMARK_TOPIC --> &bull; <li class="phpbb-icon-bookmark"><a href="{U_BOOKMARK_TOPIC}" title="{L_BOOKMARK_TOPIC}">{L_BOOKMARK_TOPIC}</a></li><!-- ENDIF -->
+              <!-- IF U_BUMP_TOPIC --> &bull; <li class="phpbb-icon-bump"><a href="{U_BUMP_TOPIC}" title="{L_BUMP_TOPIC}">{L_BUMP_TOPIC}</a></li><!-- ENDIF -->
+            <!-- ENDIF -->
+        </ul>
+      </div>
 
-<div class="span4">
-<!-- IF S_DISPLAY_SEARCH or (S_USER_LOGGED_IN and not S_IS_BOT) -->
+      <div class="copyright container">
+        {CREDIT_LINE}
+        <!-- IF TRANSLATION_INFO --><br />{TRANSLATION_INFO}<!-- ENDIF -->
+        <!-- IF DEBUG_OUTPUT --><br />{DEBUG_OUTPUT}<!-- ENDIF -->
+        <!-- IF U_ACP --><br /><strong><a href="{U_ACP}">{L_ACP}</a></strong><!-- ENDIF -->
+      </div>
+    </div>
 
-<div class="btn-group dropup pull-right">
-<a class="btn btn-inverse dropdown-toggle" data-toggle="dropdown" href="#" style=" display: block; ">
-    <i class="icon-wrench icon-white"></i>
-    <span class="caret"></span>
-  </a>
-<ul class="dropdown-menu">
-	<!-- IF S_DISPLAY_SEARCH -->
-		<li><a href="{U_SEARCH_UNANSWERED}">{L_SEARCH_UNANSWERED}</a></li>
-		<!-- IF S_LOAD_UNREADS --> <li><a href="{U_SEARCH_UNREAD}">{L_SEARCH_UNREAD}</a></li><!-- ENDIF -->
-		<!-- IF S_USER_LOGGED_IN --> <li><a href="{U_SEARCH_NEW}">{L_SEARCH_NEW}</a></li><!-- ENDIF --> 
-		<li><a href="{U_SEARCH_ACTIVE_TOPICS}">{L_SEARCH_ACTIVE_TOPICS}</a></li>
-	<!-- ENDIF -->
-	<!-- IF not S_IS_BOT and U_MARK_FORUMS --><li class="rightside"><a href="{U_MARK_FORUMS}" accesskey="m">{L_MARK_FORUMS_READ}</a></li><!-- ENDIF -->
-	<!-- IF S_HAS_SUBFORUM -->
-<!-- IF not S_IS_BOT and U_MARK_FORUMS -->
+    <div>
+      <a id="bottom" name="bottom" accesskey="z"></a>
+      <!-- IF not S_IS_BOT -->{RUN_CRON_TASK}<!-- ENDIF -->
+    </div>
 
-	<li><a href="{U_MARK_FORUMS}">{L_MARK_SUBFORUMS_READ}</a></li>
-<!-- ENDIF -->
-<!-- ENDIF -->
-</ul>
+  </div>
 
-</div>
-<br>
-</div>
-<!-- ENDIF -->
-</div>
-	
-	<div class="copyright">{CREDIT_LINE}
-		<!-- IF TRANSLATION_INFO --><br />{TRANSLATION_INFO}<!-- ENDIF -->
-		<!-- IF DEBUG_OUTPUT --><br />{DEBUG_OUTPUT}<!-- ENDIF -->
-		
-	</div>
-
-	
-</div>
-
-</div>
-
-<div class="navbar navbar-fixed-bottom hidden-phone">
-		<div class="navbar-inner">
-		<div class="container-fluid">
-		<ul class="linklist nav">
-			<li><a href="{U_INDEX}" accesskey="h"><i class="icon-home"></i></a></li>
-			<li class="divider-vertical"></li>
-				<!-- IF not S_IS_BOT -->
-					<!-- IF S_WATCH_FORUM_LINK --><li><i <!-- IF S_WATCHING_FORUM -->class="icon-unsubscribe"<!-- ELSE -->class="icon-subscribe"<!-- ENDIF -->></i><a href="{S_WATCH_FORUM_LINK}" title="{S_WATCH_FORUM_TITLE}">{S_WATCH_FORUM_TITLE}</a> </li><li class="divider-vertical"></li> <!-- ENDIF -->
-					<!-- IF U_WATCH_TOPIC --><li><i <!-- IF S_WATCHING_TOPIC -->class="icon-unsubscribe"<!-- ELSE -->class="icon-subscribe"<!-- ENDIF -->></i><a href="{U_WATCH_TOPIC}" title="{L_WATCH_TOPIC}">{L_WATCH_TOPIC}</a>  </li><li class="divider-vertical"></li><!-- ENDIF -->
-					<!-- IF U_BOOKMARK_TOPIC --><li><i class="icon-bookmark"></i><a href="{U_BOOKMARK_TOPIC}" title="{L_BOOKMARK_TOPIC}">{L_BOOKMARK_TOPIC}</a>  </li><li class="divider-vertical"></li><!-- ENDIF -->
-					<!-- IF U_BUMP_TOPIC --><li><i class="icon-bump"></i><a href="{U_BUMP_TOPIC}" title="{L_BUMP_TOPIC}">{L_BUMP_TOPIC}</a></li><li class="divider-vertical"></li><!-- ENDIF -->
-				<!-- ENDIF -->
-			<li><!-- IF U_TEAM --><a href="{U_TEAM}">{L_THE_TEAM}</a> </li><li class="divider-vertical"></li> <!-- ENDIF --><!-- IF not S_IS_BOT --><li><a href="{U_DELETE_COOKIES}">{L_DELETE_COOKIES}</a> </li><li class="divider-vertical"></li> <!-- ENDIF --><li>{S_TIMEZONE}</li>
-		</ul>
-			</div>
-		</div>
-	</div>
-
-<div>
-	<a id="bottom" accesskey="z"></a>
-	<!-- IF not S_IS_BOT -->{RUN_CRON_TASK}<!-- ENDIF -->
-</div>
-
-
-<!-- Dev mode -->
-<script type="text/javascript" src="{T_THEME_PATH}/jquery.js" type="text/javascript"></script> 
-<script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js" type="text/javascript"></script>
-<script type="text/javascript" src="{T_THEME_PATH}/bootstrap.min.js"></script>
 </body>
 </html>
