--- a/theme/stylesheet.css
+++ b/theme/stylesheet.css
@@ -1,6 +1,4 @@
-/* @override 
-	http://local.lonbrew.com/forum/styles/lonbrew-phpbb/theme/stylesheet.css
-*/
+/* @override http://local.lonbrew.com/forum/styles/lonbrew-phpbb/theme/stylesheet.css */
 
 /*  phpBB3 Style Sheet
     --------------------------------------------------------------
@@ -17,14 +15,51 @@
 @import url("buttons.css");
 @import url("cp.css");
 @import url("forms.css");
-@import url("tweaks.css");
 @import url("colours.css");
 @import url("imageset.css");
 
-@import url("/wp-content/themes/lonbrew-wp/assets/css/bootstrap.min.css");
-@import url("/wp-content/themes/lonbrew-wp/assets/css/bootstrap-responsive.min.css");
+@import url("/wp-content/themes/lonbrew-wp/assets/css/bootstrap.css");
+@import url("/wp-content/themes/lonbrew-wp/assets/css/bootstrap-responsive.css");
+
+@import url(http://fonts.googleapis.com/css?family=Open+Sans:400italic,700italic,400,700);
+
 @import url("/wp-content/themes/lonbrew-wp/assets/css/lonbrew.css");
 
 body {
   padding-top: 0;
+}
+
+#page-footer {
+  margin-top: 15px;
+}
+
+#breadcrumb {
+  margin-bottom: 7px;
+}
+
+#user_tools {
+  margin-bottom: 10px;
+}
+
+.breadcrumbalike > ul {
+  padding: 8px 15px;
+  margin: 0 0 20px;
+  list-style: none;
+  background-color: #f5f5f5;
+  -webkit-border-radius: 4px;
+     -moz-border-radius: 4px;
+          border-radius: 4px;
+
+}
+
+.breadcrumbalike > ul > li {
+  display: inline-block;
+  *display: inline;
+  text-shadow: 0 1px 0 #ffffff;
+  *zoom: 1;
+}
+
+.breadcrumb > ul > li > .divider {
+  padding: 0 5px;
+  color: #ccc;
 }
