--- a/theme/cp.css
+++ b/theme/cp.css
@@ -1,3 +1,5 @@
+/* @override http://local.lonbrew.com/forum/styles/lonbrew-phpbb/theme/cp.css */
+
 /* Control Panel Styles
 ---------------------------------------- */
 
