Make the homepage look good.

--- a/theme/common.css
+++ b/theme/common.css
@@ -24,6 +24,9 @@ p.right {
   text-align: right;
 }
 
+.heading {
+  border-bottom: 1px solid #CCCCCC;
+}
 
 /* Horizontal lists
 ----------------------------------------*/
