--- a/template/overall_footer.html
+++ b/template/overall_footer.html
@@ -21,7 +21,9 @@
         {CREDIT_LINE}
         <!-- IF TRANSLATION_INFO --><br />{TRANSLATION_INFO}<!-- ENDIF -->
         <!-- IF DEBUG_OUTPUT --><br />{DEBUG_OUTPUT}<!-- ENDIF -->
-        <!-- IF U_ACP --><br /><strong><a href="{U_ACP}">{L_ACP}</a></strong><!-- ENDIF -->
+        <br />
+        <!-- IF U_MCP --><a href="{U_MCP}">{L_MCP}</a><!-- ENDIF -->
+        <!-- IF U_ACP --> | <a href="{U_ACP}">{L_ACP}</a><!-- ENDIF -->
       </div>
     </div>
 
