--- a/template/index_body.html
+++ b/template/index_body.html
@@ -31,7 +31,7 @@
           <input type="checkbox" name="autologin" id="autologin" /> {L_LOG_ME_IN}
         </label>
       <!-- ENDIF -->
-      <button type="submit" class="btn">{L_LOGIN}</button>
+      <input type="submit" name="login" value="{L_LOGIN}" class="btn" />
       {S_LOGIN_REDIRECT}
     </fieldset>
   </p>
