Make the category and forum list pages work.

--- a/theme/stylesheet.css
+++ b/theme/stylesheet.css
@@ -38,6 +38,11 @@ body {
   margin-bottom: 20px;
 }
 
+#jumpbox {
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
 .breadcrumbalike > ul {
   padding: 8px 15px;
   margin: 0 0 20px;
@@ -59,4 +64,32 @@ body {
 .breadcrumb > ul > li > .divider {
   padding: 0 5px;
   color: #ccc;
+}
+
+table tr th {
+  background-color: white;
+  background-color: #ededed;
+  *background-color: #e5e5e5;
+  background-image: -moz-linear-gradient(top, #f2f2f2, #e5e5e5);
+  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#f2f2f2), to(#e5e5e5));
+  background-image: -webkit-linear-gradient(top, #f2f2f2, #e5e5e5);
+  background-image: -o-linear-gradient(top, #f2f2f2, #e5e5e5);
+  background-image: linear-gradient(to bottom, #f2f2f2, #e5e5e5);
+  background-repeat: repeat-x;
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#fff2f2f2', endColorstr='#ffe5e5e5', GradientType=0);
+  filter: progid:DXImageTransform.Microsoft.gradient(enabled=false);
+  -webkit-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.1), 0 1px 0 rgba(255, 255, 255, 0.075);
+     -moz-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.1), 0 1px 0 rgba(255, 255, 255, 0.075);
+          box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.1), 0 1px 0 rgba(255, 255, 255, 0.075);
+}
+
+.table-striped tbody > tr:nth-child(even) > td,
+.table-striped tbody > tr:nth-child(even) > th {
+  background-color: #ffffff;
+}
+
+table .pcon {
+  width: 35px;
+  height: 35px;
+  float: left;
 }
