--- a/template/viewforum_body.html
+++ b/template/viewforum_body.html
@@ -1,165 +1,121 @@
 <!-- INCLUDE overall_header.html -->
 
-<h2><a href="{U_VIEW_FORUM}">{FORUM_NAME}</a></h2>
+<h3><a href="{U_VIEW_FORUM}">{FORUM_NAME}</a></h3>
 
 <!-- IF FORUM_DESC or MODERATORS or U_MCP -->
 <div>
-	<!-- NOTE: remove the style="display: none" when you want to have the forum description on the forum body -->
-	<!-- IF FORUM_DESC --><div style="display: none !important;">{FORUM_DESC}<br /></div><!-- ENDIF -->
-	<!-- IF MODERATORS --><p><strong><!-- IF S_SINGLE_MODERATOR -->{L_MODERATOR}<!-- ELSE -->{L_MODERATORS}<!-- ENDIF -->:</strong> {MODERATORS}</p><!-- ENDIF -->
+  <!-- NOTE: remove the style="display: none" when you want to have the forum description on the forum body -->
+  <!-- IF FORUM_DESC --><div style="display: none !important;">{FORUM_DESC}<br /></div><!-- ENDIF -->
+  <!-- IF MODERATORS --><p><strong><!-- IF S_SINGLE_MODERATOR -->{L_MODERATOR}<!-- ELSE -->{L_MODERATORS}<!-- ENDIF -->:</strong> {MODERATORS}</p><!-- ENDIF -->
 </div>
 <!-- ENDIF -->
 
 <!-- IF S_FORUM_RULES -->
-	<div class="rules">
-		<div class="inner">
+  <div class="rules">
+    <div class="inner">
 
-		<!-- IF U_FORUM_RULES -->
-			<a href="{U_FORUM_RULES}">{L_FORUM_RULES}</a>
-		<!-- ELSE -->
-			<strong>{L_FORUM_RULES}</strong><br />
-			{FORUM_RULES}
-		<!-- ENDIF -->
+    <!-- IF U_FORUM_RULES -->
+      <a href="{U_FORUM_RULES}">{L_FORUM_RULES}</a>
+    <!-- ELSE -->
+      <strong>{L_FORUM_RULES}</strong><br />
+      {FORUM_RULES}
+    <!-- ENDIF -->
 
-		</div>
-	</div>
+    </div>
+  </div>
 <!-- ENDIF -->
 
 <!-- IF S_HAS_SUBFORUM -->
 <!-- IF not S_IS_BOT and U_MARK_FORUMS -->
 <ul class="linklist">
-	<li class="rightside"><a href="{U_MARK_FORUMS}">{L_MARK_SUBFORUMS_READ}</a></li>
+  <li class="rightside"><a href="{U_MARK_FORUMS}">{L_MARK_SUBFORUMS_READ}</a></li>
 </ul>
 <!-- ENDIF -->
-	<!-- INCLUDE forumlist_body.html -->
+  <!-- INCLUDE forumlist_body.html -->
 <!-- ENDIF -->
 
 <!-- IF S_DISPLAY_POST_INFO or PAGINATION or TOTAL_POSTS or TOTAL_TOPICS -->
-	<div class="topic-actions" <!-- IF S_HAS_SUBFORUM -->style="margin-top: 2em;"<!-- ENDIF -->>
+  <div class="topic-actions" <!-- IF S_HAS_SUBFORUM -->style="margin-top: 2em;"<!-- ENDIF -->>
+    <div class="row-fluid">
 
-	<div class="row-fluid">
-	
-	<!-- IF not S_IS_BOT and S_DISPLAY_POST_INFO -->
-	<div class="span4">
-	<!-- IF S_IS_LOCKED -->
-	
-	<a class="btn btn-danger" href="{U_POST_NEW_TOPIC}"><span></span>{L_FORUM_LOCKED}</a>
-	<!-- ELSE -->
-	<a class="btn btn-primary" href="{U_POST_NEW_TOPIC}"><span></span><i class="icon-file icon-white"></i> {L_POST_TOPIC}</a>
-	<!-- ENDIF -->
-	</div>
-	<!-- ENDIF -->
+      <!-- IF not S_IS_BOT and S_DISPLAY_POST_INFO -->
+        <div class="span4 buttons">
+          <!-- IF S_IS_LOCKED -->
+            <div class="locked-icon" title="{L_FORUM_LOCKED}"><a href="{U_POST_NEW_TOPIC}"><span></span>{L_FORUM_LOCKED}</a></div>
+          <!-- ELSE -->
+            <div class="post-icon" title="{L_POST_TOPIC}"><a href="{U_POST_NEW_TOPIC}"><span></span>{L_POST_TOPIC}</a></div>
+          <!-- ENDIF -->
+        </div>
+      <!-- ENDIF -->
 
-	
-	
-	<!-- IF PAGINATION or TOTAL_POSTS or TOTAL_TOPICS -->
-		<div class="p-pagination span4">
-			<!-- IF not S_IS_BOT and U_MARK_TOPICS --><a class="btn btn-mini" href="{U_MARK_TOPICS}" accesskey="m"><i class="icon-check"></i> {L_MARK_TOPICS_READ}</a><!-- ENDIF --><!-- IF TOTAL_TOPICS --> &bull; <span class="label">{TOTAL_TOPICS}</span><!-- ENDIF -->
-			<!-- IF PAGE_NUMBER -->
-				<!-- IF PAGINATION --> <a href="#" onclick="jumpto(); return false;" title="{L_JUMP_TO_PAGE}"> &bull; <span class="label">{PAGE_NUMBER}</span></a> &bull; <span>{PAGINATION}</span><!-- ELSE --> &bull; <span class="label">{PAGE_NUMBER}</span><!-- ENDIF -->
-			<!-- ENDIF -->
-		</div>
-	<!-- ENDIF -->
+      <!-- IF PAGINATION or TOTAL_POSTS or TOTAL_TOPICS -->
+        <div class="p-pagination span4">
+          <!-- IF not S_IS_BOT -->
+            <a href="{U_MARK_TOPICS}" accesskey="m">{L_MARK_TOPICS_READ}</a>
+          <!-- ENDIF -->
+          <!-- IF TOTAL_TOPICS -->
+            &bull; <span>{TOTAL_TOPICS}</span>
+          <!-- ENDIF -->
+          <!-- IF PAGE_NUMBER -->
+            <!-- IF PAGINATION -->
+              <a href="#" onclick="jumpto(); return false;" title="{L_JUMP_TO_PAGE}"> &bull; {PAGE_NUMBER}</a> &bull; {PAGINATION}
+            <!-- ELSE -->
+              &bull; {PAGE_NUMBER}
+            <!-- ENDIF -->
+          <!-- ENDIF -->
+        </div>
+      <!-- ENDIF -->
 
-<!-- IF S_DISPLAY_SEARCHBOX -->
-	<div class="span4">	
-		<form action="{S_SEARCHBOX_ACTION}" method="get" id="forum-search" class="form-search pull-right" style="margin:0;">
-				
-				<fieldset>
-				
-					<input class="input-medium search" type="text" name="keywords" id="search_keywords" size="20" value="{L_SEARCH_FORUM}" onclick="if (this.value == '{LA_SEARCH_FORUM}') this.value = '';" onblur="if (this.value == '') this.value = '{LA_SEARCH_FORUM}';" />
-				<button type="submit" class="btn">{L_SEARCH}</button>
-				{S_SEARCH_LOCAL_HIDDEN_FIELDS}
+      <!-- IF S_DISPLAY_SEARCHBOX -->
+        <div class="span4">
+          <form action="{S_SEARCHBOX_ACTION}" method="get" id="forum-search" class="form-search pull-right" style="margin:0;">
+            <fieldset>
+              <input class="input-medium search" type="text" name="keywords" id="search_keywords" size="20" placeholder="{L_SEARCH_FORUM}" />
+              <button type="submit" class="btn">{L_SEARCH}</button>
+              {S_SEARCH_LOCAL_HIDDEN_FIELDS}
+            </fieldset>
+          </form>
+        </div>
+      <!-- ENDIF -->
 
-				</fieldset>
-				</form>
-	</div>
-	<!-- ENDIF -->
-
-	</div>
-
+  </div>
 </div>
 <!-- ENDIF -->
 
 <!-- IF S_NO_READ_ACCESS -->
-
-	<div class="row-fluid">
-		<div class="well">
-		<strong>{L_NO_READ_ACCESS}</strong>
-		</div>
-	</div>
-
-	<!-- IF not S_USER_LOGGED_IN and not S_IS_BOT -->
-
-		<form action="{S_LOGIN_ACTION}" method="post">
-
-		<div class="row-fluid">
-			<div class="well">
-					<h3 class="box-heading"><a href="{U_LOGIN_LOGOUT}">{L_LOGIN_LOGOUT}</a><!-- IF S_REGISTER_ENABLED -->&nbsp; &bull; &nbsp;<a href="{U_REGISTER}">{L_REGISTER}</a><!-- ENDIF --></h3>
-			<div class="content">
-				
-
-				<fieldset class="fields1">
-				<dl>
-					<dt><label for="username">{L_USERNAME}:</label></dt>
-					<dd><input type="text" tabindex="1" name="username" id="username" size="25" value="{USERNAME}" class="inputbox autowidth" /></dd>
-				</dl>
-				<dl>
-					<dt><label for="password">{L_PASSWORD}:</label></dt>
-					<dd><input type="password" tabindex="2" id="password" name="password" size="25" class="inputbox autowidth" /></dd>
-					<!-- IF S_AUTOLOGIN_ENABLED --><dd><label for="autologin"><input type="checkbox" name="autologin" id="autologin" tabindex="3" /> {L_LOG_ME_IN}</label></dd><!-- ENDIF -->
-					<dd><label for="viewonline"><input type="checkbox" name="viewonline" id="viewonline" tabindex="4" /> {L_HIDE_ME}</label></dd>
-				</dl>
-				<dl>
-					<dt>&nbsp;</dt>
-					<dd><input type="submit" name="login" tabindex="5" value="{L_LOGIN}" class="btn" /></dd>
-				</dl>
-				{S_LOGIN_REDIRECT}
-				</fieldset>
-			</div>
-
-			</div>
-		</div>
-
-		</form>
-
-	<!-- ENDIF -->
-
+  <div class="alert alert-error">
+    <strong>{L_NO_READ_ACCESS}</strong>
+  </div>
 <!-- ENDIF -->
 
 <!-- BEGIN topicrow -->
 
-	<!-- IF not topicrow.S_TOPIC_TYPE_SWITCH and not topicrow.S_FIRST_ROW -->
-		</ul>
-		</div>
-	</div>
-	<!-- ENDIF -->
+  <!-- IF not topicrow.S_TOPIC_TYPE_SWITCH and not topicrow.S_FIRST_ROW -->
+    </ul>
+    </div>
+  </div>
+  <!-- ENDIF -->
 
-	<!-- IF topicrow.S_FIRST_ROW or not topicrow.S_TOPIC_TYPE_SWITCH -->
-	
-	
-	
-	
-	
-	
+  <!-- IF topicrow.S_FIRST_ROW or not topicrow.S_TOPIC_TYPE_SWITCH -->
+
 		<div class="forumbg<!-- IF topicrow.S_TOPIC_TYPE_SWITCH and (topicrow.S_POST_ANNOUNCE or topicrow.S_POST_GLOBAL) --> announcement<!-- ENDIF -->">
-		
+
 		<table class="table table-striped table-bordered" style="margin-bottom: 15px;">
 		<thead class="topiclist">
 			<tr class="header">
-				
+
 					<th width="50%"><!-- IF S_DISPLAY_ACTIVE -->{L_ACTIVE_TOPICS}<!-- ELSEIF topicrow.S_TOPIC_TYPE_SWITCH and (topicrow.S_POST_ANNOUNCE or topicrow.S_POST_GLOBAL) -->{L_ANNOUNCEMENTS}<!-- ELSE -->{L_TOPICS}<!-- ENDIF --></th>
 					<th class="posts">{L_REPLIES}</th>
 					<th class="views">{L_VIEWS}</th>
-					<th class="lastpost"><span>{L_LAST_POST}</span></th>
-				
+					<th class="lastpost hidden-phone"><span>{L_LAST_POST}</span></th>
+
 			</tr>
 		</thead>
 		<tbody class="topiclist topics">
 	<!-- ENDIF -->
 
 		<tr class="t-row<!-- IF topicrow.S_POST_GLOBAL --> warning-color<!-- ENDIF --><!-- IF topicrow.S_POST_ANNOUNCE --> info-color<!-- ENDIF --><!-- IF topicrow.S_POST_STICKY --> success-color<!-- ENDIF --><!-- IF topicrow.S_TOPIC_REPORTED --> danger-color<!-- ENDIF -->">
-			
+
 				<td class="<!-- IF topicrow.S_POST_GLOBAL --> warning-color<!-- ENDIF --><!-- IF topicrow.S_POST_ANNOUNCE --> info-color<!-- ENDIF --><!-- IF topicrow.S_POST_STICKY --> success-color<!-- ENDIF --><!-- IF topicrow.S_TOPIC_REPORTED --> danger-color<!-- ENDIF -->"width="50%" <!-- IF topicrow.TOPIC_ICON_IMG and S_TOPIC_ICONS --> style="background-image: url({T_ICONS_PATH}{topicrow.TOPIC_ICON_IMG}); background-repeat: no-repeat;"<!-- ENDIF --> title="{topicrow.TOPIC_FOLDER_IMG_ALT}"><!-- IF topicrow.S_UNREAD_TOPIC --><a href="{topicrow.U_NEWEST_POST}">{NEWEST_POST_IMG}</a> <!-- ENDIF --><!-- IF topicrow.S_POST_GLOBAL --><span class="label label-warning pull-right">GLOBAL</span> <!-- ENDIF --><!-- IF topicrow.S_POST_ANNOUNCE --><span class="label label-info pull-right">ANNOUNCEMENT</span> <!-- ENDIF --><!-- IF topicrow.S_POST_STICKY --><span class="label label-success pull-right">STICKY</span> <!-- ENDIF --><i class="pcon" style="background-image: url({topicrow.TOPIC_FOLDER_IMG_SRC}); background-repeat: no-repeat;"></i><a href="{topicrow.U_VIEW_TOPIC}" class="topictitle"> {topicrow.TOPIC_TITLE}</a>
 					<!-- IF topicrow.S_TOPIC_UNAPPROVED or topicrow.S_POSTS_UNAPPROVED --><a href="{topicrow.U_MCP_QUEUE}">{topicrow.UNAPPROVED_IMG}</a> <!-- ENDIF -->
 					<!-- IF topicrow.S_TOPIC_REPORTED --><a href="{topicrow.U_MCP_REPORT}"><span class="label label-important pull-right"><i class="icon-exclamation-sign icon-white"></i></span></a><!-- ENDIF --><br />
@@ -169,17 +125,17 @@
 				</td>
 				<td class="posts<!-- IF topicrow.S_POST_GLOBAL --> warning-color<!-- ENDIF --><!-- IF topicrow.S_POST_ANNOUNCE --> info-color<!-- ENDIF --><!-- IF topicrow.S_POST_STICKY --> success-color<!-- ENDIF --><!-- IF topicrow.S_TOPIC_REPORTED --> danger-color<!-- ENDIF -->"><center><span class="badge">{topicrow.REPLIES}</span></center></td>
 				<td class="views<!-- IF topicrow.S_POST_GLOBAL --> warning-color<!-- ENDIF --><!-- IF topicrow.S_POST_ANNOUNCE --> info-color<!-- ENDIF --><!-- IF topicrow.S_POST_STICKY --> success-color<!-- ENDIF --><!-- IF topicrow.S_TOPIC_REPORTED --> danger-color<!-- ENDIF -->"><center><span class="badge">{topicrow.VIEWS}</span></center></td>
-				<td class="lastpost<!-- IF topicrow.S_POST_GLOBAL --> warning-color<!-- ENDIF --><!-- IF topicrow.S_POST_ANNOUNCE --> info-color<!-- ENDIF --><!-- IF topicrow.S_POST_STICKY --> success-color<!-- ENDIF --><!-- IF topicrow.S_TOPIC_REPORTED --> danger-color<!-- ENDIF -->"><span><dfn>{L_LAST_POST} </dfn>{L_POST_BY_AUTHOR} {topicrow.LAST_POST_AUTHOR_FULL}
+				<td class="lastpost hidden-phone<!-- IF topicrow.S_POST_GLOBAL --> warning-color<!-- ENDIF --><!-- IF topicrow.S_POST_ANNOUNCE --> info-color<!-- ENDIF --><!-- IF topicrow.S_POST_STICKY --> success-color<!-- ENDIF --><!-- IF topicrow.S_TOPIC_REPORTED --> danger-color<!-- ENDIF -->"><span><dfn>{L_LAST_POST} </dfn>{L_POST_BY_AUTHOR} {topicrow.LAST_POST_AUTHOR_FULL}
 					<!-- IF not S_IS_BOT --><a href="{topicrow.U_LAST_POST}">{LAST_POST_IMG}</a> <!-- ENDIF --><br />{topicrow.LAST_POST_TIME}</span>
 				</td>
-			
+
 		</tr>
-		
+
 
 	<!-- IF topicrow.S_LAST_ROW -->
 			</tbody>
 			</table>
-		
+
 	</div>
 	<!-- ENDIF -->
 
@@ -205,70 +161,58 @@
 	<!-- ENDIF -->
 		</fieldset>
 	</form>
-	
+
 <!-- ENDIF -->
 
 <!-- IF .topicrow and not S_DISPLAY_ACTIVE -->
+  <div class="row-fluid">
 
-	
-	<div class="row-fluid">
-	
-	<!-- IF not S_IS_BOT and S_DISPLAY_POST_INFO -->
-	<div class="span4">
-	<!-- IF S_IS_LOCKED -->
-	
-	<a class="btn btn-danger" href="{U_POST_NEW_TOPIC}"><span></span>{L_FORUM_LOCKED}</a>
-	<!-- ELSE -->
-	<a class="btn btn-primary" href="{U_POST_NEW_TOPIC}"><span></span><i class="icon-file icon-white"></i> {L_POST_TOPIC}</a>
-	<!-- ENDIF -->
-	</div>
-	<!-- ENDIF -->
+    <!-- IF not S_IS_BOT and S_DISPLAY_POST_INFO -->
+      <div class="span4 buttons">
+        <!-- IF S_IS_LOCKED -->
+          <div class="locked-icon" title="{L_FORUM_LOCKED}"><a href="{U_POST_NEW_TOPIC}"><span></span>{L_FORUM_LOCKED}</div>
+        <!-- ELSE -->
+          <div class="post-icon" title="{L_POST_TOPIC}"><a href="{U_POST_NEW_TOPIC}"><span></span>{L_POST_TOPIC}</div>
+        <!-- ENDIF -->
+      </div>
+    <!-- ENDIF -->
 
-	
-	
-	<!-- IF PAGINATION or TOTAL_POSTS or TOTAL_TOPICS -->
-		<div class="p-pagination span4">
-			<!-- IF not S_IS_BOT and U_MARK_TOPICS --><a class="btn btn-mini" href="{U_MARK_TOPICS}" accesskey="m"><i class="icon-check"></i> {L_MARK_TOPICS_READ}</a> <!-- ENDIF --><!-- IF TOTAL_TOPICS --> &bull; <span class="label">{TOTAL_TOPICS}</span><!-- ENDIF -->
-			<!-- IF PAGE_NUMBER -->
-				<!-- IF PAGINATION --> <a href="#" onclick="jumpto(); return false;" title="{L_JUMP_TO_PAGE}"> &bull; <span class="label label-info">{PAGE_NUMBER}</span></a> &bull; <span>{PAGINATION}</span><!-- ELSE --> &bull; <span class="label">{PAGE_NUMBER}</span><!-- ENDIF -->
-			<!-- ENDIF -->
-		</div>
-	<!-- ENDIF -->
+    <!-- IF PAGINATION or TOTAL_POSTS or TOTAL_TOPICS -->
+      <div class="p-pagination span8">
+        <!-- IF not S_IS_BOT -->
+          <a href="{U_MARK_TOPICS}" accesskey="m">{L_MARK_TOPICS_READ}</a>
+        <!-- ENDIF -->
+        <!-- IF TOTAL_TOPICS -->
+          &bull; <span>{TOTAL_TOPICS}</span>
+        <!-- ENDIF -->
+        <!-- IF PAGE_NUMBER -->
+          <!-- IF PAGINATION -->
+            <a href="#" onclick="jumpto(); return false;" title="{L_JUMP_TO_PAGE}"> &bull; {PAGE_NUMBER}</a> &bull; {PAGINATION}
+          <!-- ELSE -->
+            &bull; {PAGE_NUMBER}
+          <!-- ENDIF -->
+        <!-- ENDIF -->
+      </div>
+    <!-- ENDIF -->
 
-<!-- IF S_DISPLAY_SEARCHBOX -->
-	<div class="span4">	
-		<form action="{S_SEARCHBOX_ACTION}" method="get" id="forum-search" class="form-search pull-right" style="margin:0;">
-				
-				<fieldset>
-				
-					<input class="input-medium search" type="text" name="keywords" id="search_keywords" size="20" value="{L_SEARCH_FORUM}" onclick="if (this.value == '{LA_SEARCH_FORUM}') this.value = '';" onblur="if (this.value == '') this.value = '{LA_SEARCH_FORUM}';" />
-				<button type="submit" class="btn">{L_SEARCH}</button>
-				{S_SEARCH_LOCAL_HIDDEN_FIELDS}
-
-				</fieldset>
-				</form>
-	</div>
-	<!-- ENDIF -->
-
-	</div>
-
+  </div>
 </div>
 <!-- ENDIF -->
 
 <!-- INCLUDE jumpbox.html -->
 
 <!-- IF S_DISPLAY_ONLINE_LIST -->
-<div class="row-fluid box">
-	<h3 class="heading"><!-- IF U_VIEWONLINE --><a href="{U_VIEWONLINE}">{L_WHO_IS_ONLINE}</a><!-- ELSE -->{L_WHO_IS_ONLINE}<!-- ENDIF --></h3>
-	<p>{LOGGED_IN_USER_LIST}</p>
+<div class="container">
+  <h4 class="heading"><!-- IF U_VIEWONLINE --><a href="{U_VIEWONLINE}">{L_WHO_IS_ONLINE}</a><!-- ELSE -->{L_WHO_IS_ONLINE}<!-- ENDIF --></h4>
+  <p>{LOGGED_IN_USER_LIST}</p>
 </div>
 
 <!-- ENDIF -->
 
 <!-- IF S_DISPLAY_POST_INFO -->
-<div class="row-fluid box">
-	<h3 class="heading">{L_FORUM_PERMISSIONS}</h3>
-	<p><!-- BEGIN rules -->{rules.RULE}<br /><!-- END rules --></p>
+<div class="container">
+  <h4 class="heading">{L_FORUM_PERMISSIONS}</h4>
+  <p><!-- BEGIN rules -->{rules.RULE}<br /><!-- END rules --></p>
 </div>
 
 <!-- ENDIF -->
