--- a/template/viewtopic_body.html
+++ b/template/viewtopic_body.html
@@ -1,52 +1,61 @@
 <!-- INCLUDE overall_header.html -->
 
-<h2><a href="{U_VIEW_TOPIC}">{TOPIC_TITLE}</a></h2>
+<h3><a href="{U_VIEW_TOPIC}">{TOPIC_TITLE}</a></h3>
 <!-- NOTE: remove the style="display: none" when you want to have the forum description on the topic body -->
 <!-- IF FORUM_DESC --><div style="display: none !important;">{FORUM_DESC}<br /></div><!-- ENDIF -->
 
 <!-- IF S_FORUM_RULES -->
-	<div class="rules row-fluid">
-		<div class="well">
-
-		<!-- IF U_FORUM_RULES -->
-			<a href="{U_FORUM_RULES}">{L_FORUM_RULES}</a>
-		<!-- ELSE -->
-			<strong>{L_FORUM_RULES}</strong><br />
-			{FORUM_RULES}
-		<!-- ENDIF -->
-
-		</div>
-	</div>
+  <div class="rules row-fluid">
+    <div class="well">
+      <!-- IF U_FORUM_RULES -->
+        <a href="{U_FORUM_RULES}">{L_FORUM_RULES}</a>
+      <!-- ELSE -->
+        <strong>{L_FORUM_RULES}</strong><br />
+        {FORUM_RULES}
+      <!-- ENDIF -->
+    </div>
+  </div>
 <!-- ENDIF -->
 
 <div class="row-fluid topic-actions">
+  <!-- IF not S_IS_BOT and S_DISPLAY_REPLY_INFO -->
+    <div class="span4 buttons">
+      <!-- IF S_IS_LOCKED -->
+        <div class="locked-icon" title="{L_TOPIC_LOCKED}"><a href="{U_POST_REPLY_TOPIC}"><span></span>{L_TOPIC_LOCKED_SHORT}</a></div>
+      <!-- ELSE -->
+        <div class="reply-icon" title="{L_POST_REPLY}"><a href="{U_POST_REPLY_TOPIC}"><span></span>{L_POST_REPLY}</a></div>
+      <!-- ENDIF -->
+    </div>
+  <!-- ENDIF -->
 
-	<div class="span4">
-	<!-- IF not S_IS_BOT and S_DISPLAY_REPLY_INFO -->
-	
-		<a class="btn <!-- IF S_IS_LOCKED -->btn-danger<!-- ELSE -->btn-primary<!-- ENDIF -->" href="{U_POST_REPLY_TOPIC}" title="<!-- IF S_IS_LOCKED -->{L_TOPIC_LOCKED}<!-- ELSE -->{L_POST_REPLY}<!-- ENDIF -->"><!-- IF S_IS_LOCKED --><i class="icon-lock icon-white"></i> {L_TOPIC_LOCKED_SHORT}<!-- ELSE --><i class="icon-comment icon-white"></i> {L_POST_REPLY}<!-- ENDIF --></a>
-	<!-- ENDIF -->
-	</div>
+  <!-- IF PAGINATION or TOTAL_POSTS -->
+    <div class="span4 p-pagination">
+      <!-- IF not S_IS_BOT -->
+        <a href="{U_VIEW_UNREAD_POST}">{L_VIEW_UNREAD_POST}</a>
+      <!-- ENDIF -->
+      &bull; <span>{TOTAL_POSTS}</span>
+      <!-- IF PAGE_NUMBER -->
+        <!-- IF PAGINATION -->
+          &bull; <a href="#" onclick="jumpto(); return false;" title="{L_JUMP_TO_PAGE}"><span>{PAGE_NUMBER}</span></a> &bull; <span>{PAGINATION}</span>
+        <!-- ELSE -->
+          &bull; <span>{PAGE_NUMBER}</span>
+        <!-- ENDIF -->
+      <!-- ENDIF -->
+    </div>
+  <!-- ENDIF -->
 
-	<!-- IF PAGINATION or TOTAL_POSTS -->
-		<div class="span4 p-pagination">
-			<center><!-- IF U_VIEW_UNREAD_POST and not S_IS_BOT --><a class="btn btn-mini" href="{U_VIEW_UNREAD_POST}">{L_VIEW_UNREAD_POST}</a> &bull; <!-- ENDIF --><span class="label ">{TOTAL_POSTS}</span>
-			<!-- IF PAGE_NUMBER --><!-- IF PAGINATION --> &bull; <a href="#" onclick="jumpto(); return false;" title="{L_JUMP_TO_PAGE}"><span class="label">{PAGE_NUMBER}</span></a> &bull; <span class="label">{PAGINATION}</span><!-- ELSE --> &bull; <span class="label">{PAGE_NUMBER}</span><!-- ENDIF --><!-- ENDIF --></center>
-		</div>
-	<!-- ENDIF -->
-	
-	<!-- IF S_DISPLAY_SEARCHBOX -->
-		<div class="span4">
-			<form method="get" id="topic-search" action="{S_SEARCHBOX_ACTION}" class="form-search pull-right" style="margin:0;">
-			<fieldset>
-				<input class="input-medium"  type="text" name="keywords" id="search_keywords" size="20" value="{L_SEARCH_TOPIC}" onclick="if(this.value=='{LA_SEARCH_TOPIC}')this.value='';" onblur="if(this.value=='')this.value='{LA_SEARCH_TOPIC}';" />
-				<input class="btn" type="submit" value="{L_SEARCH}" />
-				{S_SEARCH_LOCAL_HIDDEN_FIELDS}
-			</fieldset>
-			</form>
-		</div>
-	<!-- ENDIF -->
-	
+  <!-- IF S_DISPLAY_SEARCHBOX -->
+    <div class="span4">
+      <form method="get" id="topic-search" action="{S_SEARCHBOX_ACTION}" class="form-search pull-right" style="margin:0;">
+        <fieldset>
+          <input class="input-medium search"  type="text" name="keywords" id="search_keywords" size="20" placeholder="{L_SEARCH_TOPIC}" />
+          <button class="btn" type="submit">{L_SEARCH}</button>
+          {S_SEARCH_LOCAL_HIDDEN_FIELDS}
+        </fieldset>
+      </form>
+    </div>
+  <!-- ENDIF -->
+
 </div>
 <div class="clear"></div>
 
@@ -116,17 +125,12 @@
 		<!-- IF not S_IS_BOT -->
 			<!-- IF postrow.U_EDIT or postrow.U_DELETE or postrow.U_REPORT or postrow.U_WARN or postrow.U_INFO or postrow.U_QUOTE -->
 				<ul class="profile-icons">
-					<!-- IF U_EMAIL_TOPIC --><li class="rightside"><a href="{U_EMAIL_TOPIC}" title="{L_EMAIL_TOPIC}" class="btn"><i class="icon-envelope"></i></a></li><!-- ENDIF -->
-				<!-- IF U_EMAIL_PM --><li class="rightside"><a href="{U_EMAIL_PM}" title="{L_EMAIL_PM}" class="btn"><i class="icon-envelope"></i></a></li></a></li><!-- ENDIF -->
-				<!-- IF U_PRINT_TOPIC --><li class="rightside"><a class="btn" href="{U_PRINT_TOPIC}" title="{L_PRINT_TOPIC}" accesskey="p" class="print"><i class="icon-print"></i></a></li></a></li><!-- ENDIF -->
-				<!-- IF U_PRINT_PM --><li class="rightside"><a class="btn" href="{U_PRINT_PM}" title="{L_PRINT_PM}" accesskey="p" class="print"><i class="icon-print"></i></a></li></a></li><!-- ENDIF -->
-
-					<!-- IF postrow.U_EDIT --><li class="edit"><a class="btn" href="{postrow.U_EDIT}" title="{L_EDIT_POST}"><i class="icon-pencil"></i></a></li><!-- ENDIF -->
-					<!-- IF postrow.U_DELETE --><li class="delete"><a class="btn" href="{postrow.U_DELETE}" title="{L_DELETE_POST}"><i class="icon-remove"></i></a></li><!-- ENDIF -->
-					<!-- IF postrow.U_REPORT --><li class="report"><a class="btn" href="{postrow.U_REPORT}" title="{L_REPORT_POST}"><i class="icon-exclamation-sign"></i></a></li><!-- ENDIF -->
-					<!-- IF postrow.U_WARN --><li class="warn"><a class="btn" href="{postrow.U_WARN}" title="{L_WARN_USER}"><i class="icon-minus-sign"></i></a></li><!-- ENDIF -->
-					<!-- IF postrow.U_INFO --><li class="info"><a class="btn" href="{postrow.U_INFO}" title="{L_INFORMATION}"><i class="icon-info-sign"></i></a></li><!-- ENDIF -->
-					<!-- IF postrow.U_QUOTE --><li><a class="btn" href="{postrow.U_QUOTE}" title="{L_REPLY_WITH_QUOTE}"><i class="icon-share-alt"></i></a></li><!-- ENDIF -->
+					<!-- IF postrow.U_EDIT --><li class="edit-icon"><a href="{postrow.U_EDIT}" title="{L_EDIT_POST}"><span>{L_EDIT_POST}</span></a></li><!-- ENDIF -->
+					<!-- IF postrow.U_DELETE --><li class="delete-icon"><a href="{postrow.U_DELETE}" title="{L_DELETE_POST}"><span>{L_DELETE_POST}</span></a></li><!-- ENDIF -->
+					<!-- IF postrow.U_REPORT --><li class="report-icon"><a href="{postrow.U_REPORT}" title="{L_REPORT_POST}"><span>{L_REPORT_POST}</span></a></li><!-- ENDIF -->
+					<!-- IF postrow.U_WARN --><li class="warn-icon"><a href="{postrow.U_WARN}" title="{L_WARN_USER}"><span>{L_WARN_USER}</span></a></li><!-- ENDIF -->
+					<!-- IF postrow.U_INFO --><li class="info-icon"><a href="{postrow.U_INFO}" title="{L_INFORMATION}"><span>{L_INFORMATION}</span></a></li><!-- ENDIF -->
+					<!-- IF postrow.U_QUOTE --><li class="quote-icon"><a href="{postrow.U_QUOTE}" title="{L_REPLY_WITH_QUOTE}"><span>{L_REPLY_WITH_QUOTE}</span></a></li><!-- ENDIF -->
 				</ul>
 			<!-- ENDIF -->
 		<!-- ENDIF -->
@@ -161,7 +165,7 @@
 
 			<!-- IF postrow.BUMPED_MESSAGE --><div class="notice"><br /><br />{postrow.BUMPED_MESSAGE}</div><!-- ENDIF -->
 			<!-- IF postrow.SIGNATURE --><div id="sig{postrow.POST_ID}" class="signature">{postrow.SIGNATURE}</div><!-- ENDIF -->
-			
+
 		<!-- ENDIF -->
 
 		</div>
@@ -169,7 +173,7 @@
 		<!-- IF not postrow.S_IGNORE_POST -->
 			<dl class="postprofile span3" id="profile{postrow.POST_ID}">
 			<dt>
-				
+
 				<!-- IF not postrow.U_POST_AUTHOR --><strong>{postrow.POST_AUTHOR_FULL}</strong> <span class="label <!-- IF postrow.S_ONLINE and not postrow.S_IGNORE_POST --> label-success<!-- ELSE --> label-danger<!-- ENDIF -->"><!-- IF postrow.S_ONLINE and not postrow.S_IGNORE_POST --> online<!-- ELSE --> offline<!-- ENDIF --></span><!-- ELSE -->{postrow.POST_AUTHOR_FULL} <span class="label <!-- IF postrow.S_ONLINE and not postrow.S_IGNORE_POST --> label-success<!-- ELSE --> label-danger<!-- ENDIF -->"><!-- IF postrow.S_ONLINE and not postrow.S_IGNORE_POST --> online<!-- ELSE --> offline<!-- ENDIF --></span><!-- ENDIF -->
 			</dt>
 
@@ -263,47 +267,53 @@
 
 <!-- ENDIF -->
 
-
-
 <div class="row-fluid topic-actions">
+  <!-- IF not S_IS_BOT and S_DISPLAY_REPLY_INFO -->
+    <div class="span4 buttons">
+      <!-- IF S_IS_LOCKED -->
+        <div class="locked-icon" title="{L_TOPIC_LOCKED}"><a href="{U_POST_REPLY_TOPIC}"><span></span>{L_TOPIC_LOCKED_SHORT}</a></div>
+      <!-- ELSE -->
+        <div class="reply-icon" title="{L_POST_REPLY}"><a href="{U_POST_REPLY_TOPIC}"><span></span>{L_POST_REPLY}</a></div>
+      <!-- ENDIF -->
+    </div>
+  <!-- ENDIF -->
 
-	
-	<!-- IF not S_IS_BOT and S_DISPLAY_REPLY_INFO -->
-	<div class="span4">
-		<a class="btn <!-- IF S_IS_LOCKED -->btn-danger<!-- ELSE -->btn-primary<!-- ENDIF -->" href="{U_POST_REPLY_TOPIC}" title="<!-- IF S_IS_LOCKED -->{L_TOPIC_LOCKED}<!-- ELSE -->{L_POST_REPLY}<!-- ENDIF -->"><!-- IF S_IS_LOCKED --><i class="icon-lock icon-white"></i> {L_TOPIC_LOCKED_SHORT}<!-- ELSE --><i class="icon-comment icon-white"></i> {L_POST_REPLY}<!-- ENDIF --></a></div>
-	<!-- ENDIF -->
-	
+  <!-- IF PAGINATION or TOTAL_POSTS -->
+    <div class="span4 p-pagination">
+      <!-- IF not S_IS_BOT -->
+        <a href="{U_VIEW_UNREAD_POST}">{L_VIEW_UNREAD_POST}</a>
+      <!-- ENDIF -->
+      &bull; <span>{TOTAL_POSTS}</span>
+      <!-- IF PAGE_NUMBER -->
+        <!-- IF PAGINATION -->
+          &bull; <a href="#" onclick="jumpto(); return false;" title="{L_JUMP_TO_PAGE}"><span>{PAGE_NUMBER}</span></a> &bull; <span>{PAGINATION}</span>
+        <!-- ELSE -->
+          &bull; <span>{PAGE_NUMBER}</span>
+        <!-- ENDIF -->
+      <!-- ENDIF -->
+    </div>
+  <!-- ENDIF -->
 
-	<!-- IF PAGINATION or TOTAL_POSTS -->
-		<div class="span4 p-pagination">
-			<center><!-- IF U_VIEW_UNREAD_POST and not S_IS_BOT --><a class="btn btn-mini" href="{U_VIEW_UNREAD_POST}">{L_VIEW_UNREAD_POST}</a> &bull; <!-- ENDIF --><span class="label ">{TOTAL_POSTS}</span>
-			<!-- IF PAGE_NUMBER --><!-- IF PAGINATION --> &bull; <a href="#" onclick="jumpto(); return false;" title="{L_JUMP_TO_PAGE}"><span class="label">{PAGE_NUMBER}</span></a> &bull; <span class="label">{PAGINATION}</span><!-- ELSE --> &bull; <span class="label">{PAGE_NUMBER}</span><!-- ENDIF --><!-- ENDIF --></center>
-		</div>
-	<!-- ENDIF -->
-	
-	<!-- IF S_DISPLAY_SEARCHBOX -->
-		<div class="span4">
-			<form method="get" id="topic-search" action="{S_SEARCHBOX_ACTION}" class="form-search pull-right" style="margin:0;">
-			<fieldset>
-				<input class="input-medium"  type="text" name="keywords" id="search_keywords" size="20" value="{L_SEARCH_TOPIC}" onclick="if(this.value=='{LA_SEARCH_TOPIC}')this.value='';" onblur="if(this.value=='')this.value='{LA_SEARCH_TOPIC}';" />
-				<input class="btn" type="submit" value="{L_SEARCH}" />
-				{S_SEARCH_LOCAL_HIDDEN_FIELDS}
-			</fieldset>
-			</form>
-		</div>
-	<!-- ENDIF -->
-	
+  <!-- IF S_DISPLAY_SEARCHBOX -->
+    <div class="span4">
+      <form method="get" id="topic-search" action="{S_SEARCHBOX_ACTION}" class="form-search pull-right" style="margin:0;">
+        <fieldset>
+          <input class="input-medium search"  type="text" name="keywords" id="search_keywords" size="20" placeholder="{L_SEARCH_TOPIC}" />
+          <button class="btn" type="submit">{L_SEARCH}</button>
+          {S_SEARCH_LOCAL_HIDDEN_FIELDS}
+        </fieldset>
+      </form>
+    </div>
+  <!-- ENDIF -->
 </div>
 
 <!-- INCLUDE jumpbox.html -->
 
-
-
 <!-- IF S_DISPLAY_ONLINE_LIST -->
-<div class="row-fluid box">
-	<h3 class="heading"><!-- IF U_VIEWONLINE --><a href="{U_VIEWONLINE}">{L_WHO_IS_ONLINE}</a><!-- ELSE -->{L_WHO_IS_ONLINE}<!-- ENDIF --></h3>
-	<p>{LOGGED_IN_USER_LIST}</p>
-</div>
+  <div class="row-fluid box">
+    <h4 class="heading"><!-- IF U_VIEWONLINE --><a href="{U_VIEWONLINE}">{L_WHO_IS_ONLINE}</a><!-- ELSE -->{L_WHO_IS_ONLINE}<!-- ENDIF --></h4>
+    <p>{LOGGED_IN_USER_LIST}</p>
+  </div>
 <!-- ENDIF -->
 
 <!-- INCLUDE overall_footer.html -->
