Add tapatalk tags to style.

--- a/template/overall_header.html
+++ b/template/overall_header.html
@@ -12,6 +12,7 @@
   {META}
 
   <title>{SITENAME} | <!-- IF S_IN_MCP -->{L_MCP} | <!-- ELSEIF S_IN_UCP -->{L_UCP} | <!-- ENDIF -->{PAGE_TITLE}</title>
+  {TAPATALK_HEAD}
 
   <!-- IF S_ENABLE_FEEDS -->
     <!-- IF S_ENABLE_FEEDS_OVERALL --><link rel="alternate" type="application/atom+xml" title="{L_FEED} - {SITENAME}" href="{U_FEED}" /><!-- ENDIF -->
@@ -72,6 +73,10 @@
 </head>
 
 <body id="phpbb" class="section-{SCRIPT_NAME} {S_CONTENT_DIRECTION}">
+  <!-- Tapatalk Detect body start -->
+  <script type="text/javascript">tapatalkDetect()</script>
+  <!-- Tapatalk Detect banner body end -->
+
   <a id="top" accesskey="t"></a>
   <header>
     <div class="container">
