--- a/template/overall_header.html
+++ b/template/overall_header.html
@@ -2,11 +2,6 @@
 <html>
 <head>
   <meta http-equiv="content-type" content="text/html; charset={S_CONTENT_ENCODING}" />
-  <meta http-equiv="content-style-type" content="text/css" />
-  <meta http-equiv="content-language" content="{S_USER_LANG}" />
-  <meta http-equiv="imagetoolbar" content="no" />
-  <meta name="resource-type" content="document" />
-  <meta name="distribution" content="global" />
   <meta name="keywords" content="" />
   <meta name="description" content="" />
   {META}
@@ -94,7 +89,7 @@
     <p class="skiplink"><a href="#start_here">{L_SKIP}</a></p>
   </header>
 
-  <navigation>
+  <nav>
     <div class="navbar-wrapper">
       <div class="container">
         <div class="navbar">
@@ -107,20 +102,18 @@
 
             <div class="nav-collapse collapse">
               <ul class="nav">
-                <li class="page_item"><a href="/">Home</a></li>
-                <li class="page_item"><a href="/news-and-updates">News and Updates</a></li>
-                <li class="page_item"><a href="/meeting-schedule">Meeting Schedule</a></li>
-                <li class="page_item"><a href="/our-favourite-pubs">Our Favourite Pubs</a></li>
-                <li class="page_item active"><a href="/forum">Forum</a></li>
+                <li><a href="/">Home</a></li>
+                <li><a href="/news-and-updates">News and Updates</a></li>
+                <li><a href="/meeting-schedule">Meeting Schedule</a></li>
+                <li><a href="/our-favourite-pubs">Our Favourite Pubs</a></li>
+                <li class="active"><a href="/forum">Forum</a></li>
               </ul>
-
             </div><!--/.nav-collapse -->
           </div><!-- /.navbar-inner -->
         </div><!-- /.navbar -->
-
       </div> <!-- /.container -->
     </div>
-  </navigation>
+  </nav>
 
   <a id="start_here"></a>
   <div class="container">
