Use password input fields...

--- a/template/ucp_register.html
+++ b/template/ucp_register.html
@@ -59,7 +59,7 @@
       <div class="control-group">
         <label for="new_password" class="control-label">{L_PASSWORD}:</label>
         <div class="controls">
-          <input type="text" name="new_password" id="new_password" placeholder="{PASSWORD}" title="{L_NEW_PASSWORD}" />
+          <input type="password" name="new_password" id="new_password" placeholder="{PASSWORD}" title="{L_NEW_PASSWORD}" />
           <span class="help-inline">{L_PASSWORD_EXPLAIN}</span>
         </div>
       </div>
@@ -67,7 +67,7 @@
       <div class="control-group">
         <label for="password_confirm" class="control-label">{L_CONFIRM_PASSWORD}:</label>
         <div class="controls">
-          <input type="text" name="password_confirm" id="password_confirm" placeholder="{PASSWORD_CONFIRM}" title="{L_CONFIRM_PASSWORD}" />
+          <input type="password" name="password_confirm" id="password_confirm" placeholder="{PASSWORD_CONFIRM}" title="{L_CONFIRM_PASSWORD}" />
         </div>
       </div>
 
