--- a/template/captcha_default.html
+++ b/template/captcha_default.html
@@ -3,11 +3,10 @@
   <p>{L_CONFIRM_EXPLAIN}</p>
 <!-- ENDIF -->
 
-
 <div class="control-group">
   <label for="confirm_code" class="control-label">{L_CONFIRM_CODE}:</label>
   <div class="controls">
-    <img src="{CONFIRM_IMAGE_LINK}" alt="{L_CONFIRM_CODE}" /><br />
+    <img src="{CONFIRM_IMAGE_LINK}" alt="{L_CONFIRM_CODE}" style="margin-bottom:5px" /><br />
     <input type="text" name="confirm_code" id="confirm_code" title="{L_CONFIRM_CODE}" />
     <!-- IF S_CONFIRM_REFRESH --><input type="submit" name="refresh_vc" id="refresh_vc" class="btn" value="{L_VC_REFRESH}" /><!-- ENDIF -->
     <input type="hidden" name="confirm_id" id="confirm_id" value="{CONFIRM_ID}" /><br />
